2010-05-23  Roman Gershman  <romange@google.com>

        Reviewed by Darin Fisher.

        [Chromium] Suggestion popup is not closed when the view is scrolled.
        https://bugs.webkit.org/show_bug.cgi?id=38640

        This bug appears on both Windows and Linux platforms.
        Mac OS, however handles window messages differently and
        closes popup menu in RenderWidgetHostViewMac::Destroy().

        No tests were added because test_shell does not support suggestion
        popup.

        * src/ChromeClientImpl.cpp:
        (WebKit::ChromeClientImpl::invalidateContentsForSlowScroll):
        (WebKit::ChromeClientImpl::scroll):

2010-05-23  Marcus Bulach  <bulach@chromium.org>

        Reviewed by Kent Tamura.

        [chromium] Adds Geolocation support to DumpRenderTree.
        https://bugs.webkit.org/show_bug.cgi?id=39440

        Existing LayoutTests/fast/dom/Geolocation/* should pass.

        * public/WebGeolocationServiceMock.h:
        * src/WebGeolocationServiceMock.cpp:
        (WebKit::WebGeolocationServiceMock::setMockGeolocationPermission):
        (WebKit::WebGeolocationServiceMock::requestPermissionForFrame):
        (WebKit::WebGeolocationServiceMock::attachBridge):
        (WebKit::WebGeolocationServiceMock::detachBridge):

2010-05-22  Kent Tamura  <tkent@chromium.org>

        Reviewed by Dimitri Glazkov.

        [DRT/Chromium] Link resources and load Ahem font for Windows
        https://bugs.webkit.org/show_bug.cgi?id=39473

        * WebKit.gyp:
          Add net and webkit resources for Windows.
          Copy AHEM____.TTF to DumpRenderTree.exe directory.

2010-05-21  Steve Block  <steveblock@google.com>

        Reviewed by Jeremy Orlow.

        Add DeviceOrientation and DeviceOrientationClient
        https://bugs.webkit.org/show_bug.cgi?id=39479

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::WebViewImpl):

2010-05-20  Viet-Trung Luu  <viettrungluu@chromium.org>

        Reviewed by Darin Fisher.
